# vdist-solver-fortran

./: .gitignore  CITATION.cff  MANIFEST.in  Makefile  README.md  backtrace-sample.py  fpm.toml  main.py  pyproject.toml  sample.py  setup.py  source_me.sh
app/: main.f90
sample/: sample.py
src/: vdist-solver-fortran.f90
src/core/: dust_charge_simulator.f90  field.f90  particle.f90  probabirities.f90  probabirity_record.f90  simulator.f90  solver.f90  vdsolverf_core.f90
src/emses/: allcom.f90  emses_boundaries.f90  emses_solver.f90  namelist.f90
vdsolverf/: __init__.py  tmpolary_input.py  wrapper.py
vdsolverf/core/: __init__.py  particles.py  phase_grid.py
vdsolverf/emses/: __init__.py  geotype.py  tmpolary_input.py  wrapper.py
