[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  'fpm==0.10.0; sys_platform == "win32"',
  'fpm; sys_platform != "win32"',
]

[project]
name = "vdist-solver-fortran"
version = "1.4.1"

requires-python = ">=3.7"

description = "Wrapper of velocsty distribution solver written in Fortran"
readme = "README.md"

keywords = []

authors = [{ name = "Nkzono99", email = "j-nakazono@stu.kobe-u.ac.jp" }]

maintainers = [{ name = "Nkzono99", email = "j-nakazono@stu.kobe-u.ac.jp" }]

license = { file = "LICENSE" }

dependencies = [
  "f90nml",
  "emout >= 2.0.4",
  "numpy",
  "scipy",
  "tqdm",
  "jupyter",
  "ipykernel",
  "ipywidgets",
]

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[project.urls]
Repository = "https://github.com/Nkzono99/vdist-solver-fortran.git"

[tool.setuptools]
include-package-data = true
